* 2014-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 35359: Improved special /ajax/mail?action=all request fired when loading portal page

* 2014-10-30 - thorben.betten@open-xchange.com

 - Fix for bug 35242: Added null guard & improved logging behavior to provide mail information in order to identify the mail later on

* 2014-10-29 - thorben.betten@open-xchange.com

 - Fix for bug 35255: Also consider file extension if mail part claims to be HTML by Content-Type
 - Fix for bug 34465: Check for a POP3 account by mail account data fetched from storage. Do no longer rely on valid data sent by client
 - Fix for bug 35261: Enum for client parameters passed to IMAp store

* 2014-10-21 - thorben.betten@open-xchange.com

 - Fix for bug 34706: Do not consult session storage in case session look-up is performed by alternative identifier and
                      ensure a timed-out (but still pending) session storage query get orderly interrupted to relieve pressure on Hazelcast
 - Fix for bug 35023: Orderly deal with absent user permission bits

* 2014-10-16 - thorben.betten@open-xchange.com

 - Fix for bug 34985: Restrictive reading of configuration and improved logging in case a .properties file contains a malformed Unicode
                      escape sequence
 - Fix for bug 34922: Properly re-initialize config-cascade's "server" configuration provider on configuration reload trigger

* 2014-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 34920: Do not close SQL resources on SearchIterator creation
 - Fix for bug 33862: Signal former folder type "7" for shared/public mail folders for USM-* clients

* 2014-10-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 34896: Initialize member before first accessing it
 - Fix for bug 34897: Consider number of files in context for "amount"-type quota

* 2014-10-10 - thorben.betten@open-xchange.com

 - Fix for bug 34861: Use shorter call-back URL as IE seems to cut off call-back URL if certain size is exceeded