@@ -1,3 +1,7 @@
+* 2014-11-14 - thorben.betten@open-xchange.com
+
+ - Fix for bug 35470: Fixed check whether parent folder is a public PIM folder
+
 * 2014-11-06 - thorben.betten@open-xchange.com
 
  - Fix for bug 35359: Improved special /ajax/mail?action=all request fired when loading portal page
